http put & delete methods, refactor